<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="settings_intro">Settings Page: Choose your preferred theme: light - dark and customize font type and size, any applied changes in this settings page will require you to restart the application.</string>
    <string name="from">from</string>
    <string name="f_a_c_e_b_o_o_k">F A C E B O O K</string>
    <string name="choose_your_preferred_theme">Choose Your Preferred Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="post">POST</string>
    <string name="caption">Caption</string>
    <string name="liked_by_20">Liked by 20</string>
    <string name="view_all_5_comments">View all 5 comments</string>
    <string name="comments">COMMENTS</string>
    <string name="comment">Comment</string>
    <string name="dot">.</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="photos">PHOTOS</string>
    <string name="search_users">Search Users</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="save">SAVE</string>
    <string name="change_photo">CHANGE PHOTO</string>
    <string name="bio">Bio</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="settings">Settings</string>
    <string name="follow_and_invite_friends">Follow and Invite Friends</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="ads">Ads</string>
    <string name="payments">Payments</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="log_out">LOG OUT</string>
</resources>