<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageSearchProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/imageSearchProfile"
        android:layout_marginStart="8dp"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="?attr/text_color"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/textFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="?attr/text_color"
            android:maxLines="1"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        tools:ignore="RelativeOverlap"
        android:visibility="gone"/>

</RelativeLayout>