<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/dot"
        android:textColor="?attr/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@+id/dot"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageProfile"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textUsernameComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="?attr/text_color"/>

        <TextView
            android:id="@+id/textCommentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="?attr/text_color"/>

    </LinearLayout>

</RelativeLayout>