<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfileNotification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/imageProfileNotification"
        android:layout_toStartOf="@id/imagePostNotification">

        <TextView
            android:id="@+id/textUserNameNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/username"
            android:textColor="?attr/text_color"/>

        <TextView
            android:id="@+id/textCommentNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all_5_comments"
            android:maxLines="5"/>

    </LinearLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imagePostNotification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        app:riv_corner_radius="6dp"
        android:contentDescription="@string/app_name"
        android:layout_alignParentEnd="true" />

</RelativeLayout>